--- a/src/App.scss
+++ b/src/App.scss
@@ -18,4 +18,65 @@ code {
     align-items: center;
     justify-content: space-between;
   }
+
+  .login-container {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto; 
+
+    .title {
+      text-align: center;
+      font-size: 25px;
+      font-weight: 750;
+      padding-top: 30px;
+    }
+
+    .text {
+      font-weight: 600;
+      padding-bottom: 3px;
+    }
+
+    input {
+      padding: 12px 7px;
+      outline: none;
+      margin-bottom: 7px;
+      background: #1618230f;
+      border: #1618230f;
+      border-radius: 3px;
+      width: 100%;
+
+      &:hover {
+        background-color: #dedede;
+      }
+      }
+
+      .input-2 {
+        position: relative;
+
+        i {
+          position: absolute;
+          top: 17px;
+          right: 10px;
+          cursor: pointer;
+        }
+    }
+
+    button {
+      padding: 10px;
+      border-radius: 3px;
+      outline: none;
+      border: none;
+      margin-top: 15px;
+
+      &.active {
+        background-color: #fe2c55;
+      }
+    }
+
+    .back {
+      text-align: center;
+      margin-top: 30px;
+      cursor: pointer;
+    }
+  }
 }
