--- a/src/components/TableUsers.scss
+++ b/src/components/TableUsers.scss
@@ -5,4 +5,14 @@
     span button {
         padding-left: 2px;
     }
+
+    
+}
+.customize-table {
+    width: inherit;
+    overflow-x: auto;
+}
+
+.pagination {
+    justify-content: center;
 }
